@@ -502,7 +502,4 @@ ASM_NAME(dct36_3dnow):
 	popl %ebp
 	ret
 
-/* Mark non-executable stack. */
-#if defined(__linux__) && defined(__ELF__)
-.section .note.GNU-stack,"",%progbits
-#endif
+NONEXEC_STACK
