@@ -315,7 +315,4 @@ ASM_NAME(synth_1to1_3dnow_asm):
 	addl $24,%esp
 	ret
 
-/* Mark non-executable stack. */
-#if defined(__linux__) && defined(__ELF__)
-.section .note.GNU-stack,"",%progbits
-#endif
+NONEXEC_STACK
