@@ -207,7 +207,4 @@ ASM_NAME(make_decode_tables_mmx_asm):
 	popl %edi
 	ret
 
-/* Mark non-executable stack. */
-#if defined(__linux__) && defined(__ELF__)
-.section .note.GNU-stack,"",%progbits
-#endif
+NONEXEC_STACK
